# kurs-1-guap

./: CMakeLists.txt  SQLController.cpp  SQLController.h  database.sqlite  main.cpp
